<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.NoActionBar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/tvToolbar"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/toolbar"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            tools:targetApi="jelly_bean" />

        <EditText
            android:id="@+id/edt_toolbar"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ellipsize="none"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="sans-serif"
            android:gravity="start"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:hint="@string/search"
            android:visibility="gone"
            android:imeOptions="actionSearch"
            android:textSize="20sp"
            tools:targetApi="jelly_bean"
            android:inputType="text" />

        <ImageView
            android:id="@+id/imRefresh"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/refresh"
            android:src="@android:drawable/stat_notify_sync_noanim"
            android:visibility="visible"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true" />

        <ImageView
            android:id="@+id/im_micro"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/voice_search"
            android:src="@drawable/ic_mic_white_24dp"
            android:visibility="gone"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentRight="true" />
        <ImageView
            android:id="@+id/imSearch"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_search_white_24dp"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/imBackHome"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/home"
            android:src="@drawable/ic_home_white_24dp"
            android:visibility="gone" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_gravity="bottom"
        android:background="#73ff00" />

</LinearLayout>